[WIP] Fix plotting handler [skip ci]

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -65,8 +65,8 @@
     "    DataReady,\n",
     ")\n",
     "from beamlime.applications.daemons import (\n",
-    "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
-    "    NumFrames, DataFeedingSpeed,\n",
+    "    DetectorDataReceived, FakeListener, NexusStructurePath,\n",
+    "    NumFrames, DataFeedingSpeed, NexusSkeletonPath,\n",
     "    EventRate, FrameRate, RunStart\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
@@ -86,7 +86,8 @@
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
     "        Workflow: Workflow('dummy'),\n",
-    "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir_detectors.json')\n",
+    "        NexusStructurePath: NexusStructurePath('../../tests/applications/ymir_detectors.json'),\n",
+    "        NexusSkeletonPath: NexusSkeletonPath(\"\"),\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
