Fix plotting example.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -52,7 +52,11 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from beamlime.constructors import multiple_constant_providers, SingletonProvider, Factory\n",
+    "from beamlime.constructors import (\n",
+    "    multiple_constant_providers,\n",
+    "    SingletonProvider,\n",
+    "    Factory,\n",
+    ")\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "\n",
     "from beamlime.executables.prototypes import collect_default_providers\n",
@@ -63,19 +67,28 @@
     "    PlotStreamer,\n",
     "    DataAssembler,\n",
     "    DataReady,\n",
+    "    MaxPlotColumn,\n",
+    "    # ResultRegistry,\n",
     ")\n",
     "from beamlime.applications.daemons import (\n",
-    "    DetectorDataReceived, FakeListener, NexusStructurePath,\n",
-    "    NumFrames, DataFeedingSpeed, NexusSkeletonPath,\n",
-    "    EventRate, FrameRate, RunStart\n",
+    "    DetectorDataReceived,\n",
+    "    FakeListener,\n",
+    "    NexusStructurePath,\n",
+    "    NumFrames,\n",
+    "    DataFeedingSpeed,\n",
+    "    NexusSkeletonPath,\n",
+    "    EventRate,\n",
+    "    FrameRate,\n",
+    "    RunStart,\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
     "\n",
-    "\n",
+    "result_registry = {}\n",
     "prototype_factory = Factory(collect_default_providers())\n",
     "prototype_factory.providers[FakeListener] = SingletonProvider(FakeListener)\n",
     "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
     "prototype_factory.providers[DataAssembler] = DataAssembler\n",
+    "# prototype_factory.providers[ResultRegistry] = lambda: ResultRegistry(result_registry)\n",
     "\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
@@ -86,8 +99,11 @@
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
     "        Workflow: Workflow('dummy'),\n",
-    "        NexusStructurePath: NexusStructurePath('../../tests/applications/ymir_detectors.json'),\n",
+    "        NexusStructurePath: NexusStructurePath(\n",
+    "            '../../tests/applications/ymir_detectors.json'\n",
+    "        ),\n",
     "        NexusSkeletonPath: NexusSkeletonPath(\"\"),\n",
+    "        MaxPlotColumn: MaxPlotColumn(1),\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
@@ -99,7 +115,9 @@
     "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
     "    data_assembler = prototype_factory[DataAssembler]\n",
     "    app.register_handling_method(RunStart, data_assembler.set_run_start)\n",
-    "    app.register_handling_method(DetectorDataReceived, data_assembler.assemble_detector_data)\n",
+    "    app.register_handling_method(\n",
+    "        DetectorDataReceived, data_assembler.assemble_detector_data\n",
+    "    )\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(DataReady, data_reduction_handler.reduce_data)\n",
     "    # Register Daemons\n",
