Update dummy workflow to match the new workflow protocol.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -67,7 +67,7 @@
     "from beamlime.applications.daemons import (\n",
     "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
     "    NumFrames, DataFeedingSpeed,\n",
-    "    EventRate, FrameRate, RunStart\n",
+    "    EventRate, FrameRate, RunStart, NexusFilePath\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
     "\n",
@@ -86,7 +86,8 @@
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
     "        Workflow: Workflow('dummy'),\n",
-    "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir_detectors.json')\n",
+    "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir_detectors.json'),\n",
+    "        NexusFilePath: NexusFilePath(\"\"),  # TODO: Make a matching file for the template\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
