Add result registry argument to the data reduction handler.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -52,7 +52,11 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from beamlime.constructors import multiple_constant_providers, SingletonProvider, Factory\n",
+    "from beamlime.constructors import (\n",
+    "    multiple_constant_providers,\n",
+    "    SingletonProvider,\n",
+    "    Factory,\n",
+    ")\n",
     "from beamlime.logging import BeamlimeLogger\n",
     "\n",
     "from beamlime.executables.prototypes import collect_default_providers\n",
@@ -63,11 +67,18 @@
     "    PlotStreamer,\n",
     "    DataAssembler,\n",
     "    DataReady,\n",
+    "    ResultRegistry,\n",
     ")\n",
     "from beamlime.applications.daemons import (\n",
-    "    DetectorDataReceived, FakeListener, NexusTemplatePath,\n",
-    "    NumFrames, DataFeedingSpeed,\n",
-    "    EventRate, FrameRate, RunStart, NexusFilePath\n",
+    "    DetectorDataReceived,\n",
+    "    FakeListener,\n",
+    "    NexusTemplatePath,\n",
+    "    NumFrames,\n",
+    "    DataFeedingSpeed,\n",
+    "    EventRate,\n",
+    "    FrameRate,\n",
+    "    RunStart,\n",
+    "    NexusFilePath,\n",
     ")\n",
     "from beamlime.stateless_workflow import Workflow\n",
     "\n",
@@ -77,6 +88,7 @@
     "prototype_factory.providers[PlotStreamer] = SingletonProvider(PlotStreamer)\n",
     "prototype_factory.providers[DataAssembler] = DataAssembler\n",
     "\n",
+    "result_registry = ResultRegistry({})\n",
     "with multiple_constant_providers(\n",
     "    prototype_factory,\n",
     "    {\n",
@@ -86,8 +98,11 @@
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
     "        Workflow: Workflow('dummy'),\n",
-    "        NexusTemplatePath: NexusTemplatePath('../../tests/applications/ymir_detectors.json'),\n",
+    "        NexusTemplatePath: NexusTemplatePath(\n",
+    "            '../../tests/applications/ymir_detectors.json'\n",
+    "        ),\n",
     "        NexusFilePath: NexusFilePath(\"\"),  # TODO: Make a matching file for the template\n",
+    "        ResultRegistry: result_registry,\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
@@ -99,7 +114,9 @@
     "    app.register_handling_method(WorkflowResultUpdate, plot_saver.update_histogram)\n",
     "    data_assembler = prototype_factory[DataAssembler]\n",
     "    app.register_handling_method(RunStart, data_assembler.set_run_start)\n",
-    "    app.register_handling_method(DetectorDataReceived, data_assembler.assemble_detector_data)\n",
+    "    app.register_handling_method(\n",
+    "        DetectorDataReceived, data_assembler.assemble_detector_data\n",
+    "    )\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
     "    app.register_handling_method(DataReady, data_reduction_handler.reduce_data)\n",
     "    # Register Daemons\n",
@@ -116,6 +133,16 @@
    "outputs": [],
    "source": [
     "plot_saver.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve the result from the registry\n",
+    "next(iter(result_registry.values()))"
    ]
   }
  ],
