Update argument parser and example according to the change.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -22,6 +22,7 @@
     "!beamlime \\\n",
     "    --workflow dummy \\\n",
     "    --nexus-template-path ../../tests/applications/ymir_detectors.json \\\n",
+    "    --nexus-file-path 'ymir_detectors.nxs' \\\n",
     "    --image-path-prefix reduction-result"
    ]
   },
