--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -101,7 +101,8 @@
     "        NexusTemplatePath: NexusTemplatePath(\n",
     "            '../../tests/applications/ymir_detectors.json'\n",
     "        ),\n",
-    "        NexusFilePath: NexusFilePath(\"\"),  # TODO: Make a matching file for the template\n",
+    "        NexusFilePath: NexusFilePath(\"ymir_detectors.nxs\"),\n",
+    "        # TODO: Make a matching file for the template\n",
     "        ResultRegistry: result_registry,\n",
     "    },\n",
     "):\n",
