New state-full workflow protocl.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "!beamlime \\\n",
-    "    --workflow dummy \\\n",
+    "    --workflow dummy_stateless \\\n",
     "    --nexus-template-path ../../tests/applications/ymir_detectors.json \\\n",
     "    --nexus-file-path 'ymir_detectors.nxs' \\\n",
     "    --image-path-prefix reduction-result"
