--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -80,7 +80,7 @@
     "    RunStart,\n",
     "    NexusFilePath,\n",
     ")\n",
-    "from beamlime.stateless_workflow import Workflow\n",
+    "from beamlime.workflow_protocols import Workflow\n",
     "\n",
     "\n",
     "prototype_factory = Factory(collect_default_providers())\n",
@@ -97,7 +97,7 @@
     "        NumFrames: NumFrames(5),\n",
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
-    "        Workflow: Workflow('dummy'),\n",
+    "        Workflow: Workflow('dummy_stateless'),\n",
     "        NexusTemplatePath: NexusTemplatePath(\n",
     "            '../../tests/applications/ymir_detectors.json'\n",
     "        ),\n",
