Rename workflow plugin group name and update data reduction handlers according to the protocol.

--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -80,7 +80,7 @@
     "    RunStart,\n",
     "    NexusFilePath,\n",
     ")\n",
-    "from beamlime.workflow_protocols import Workflow\n",
+    "from beamlime.workflow_protocols import WorkflowName\n",
     "\n",
     "\n",
     "prototype_factory = Factory(collect_default_providers())\n",
@@ -97,7 +97,7 @@
     "        NumFrames: NumFrames(5),\n",
     "        EventRate: EventRate(10_000),\n",
     "        FrameRate: FrameRate(14),\n",
-    "        Workflow: Workflow('dummy_stateless'),\n",
+    "        WorkflowName: WorkflowName('dummy'),\n",
     "        NexusTemplatePath: NexusTemplatePath(\n",
     "            '../../tests/applications/ymir_detectors.json'\n",
     "        ),\n",
@@ -117,6 +117,7 @@
     "    app.register_handling_method(RunStart, data_assembler.set_run_start)\n",
     "    app.register_handling_method(DataPieceReceived, data_assembler.merge_data_piece)\n",
     "    data_reduction_handler = prototype_factory[DataReductionHandler]\n",
+    "    app.register_handling_method(RunStart, data_reduction_handler.set_run_start)\n",
     "    app.register_handling_method(DataReady, data_reduction_handler.reduce_data)\n",
     "    # Register Daemons\n",
     "    app.register_daemon(prototype_factory[FakeListener])\n",
