Update workflow protocol name in the documentation.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -71,9 +71,9 @@
    "source": [
     "import inspect\n",
     "\n",
-    "from beamlime import StatelessWorkflow\n",
+    "from beamlime import LiveWorkflow\n",
     "\n",
-    "print(inspect.getsource(StatelessWorkflow))"
+    "print(inspect.getsource(LiveWorkflow))"
    ]
   },
   {
