--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -16,14 +16,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden",
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(\"../../tests/helpers\")\n",
+    "\n",
+    "from tests.applications.data import get_path\n",
+    "\n",
+    "os.environ[\"TEST_NEXUS_FILE_PATH\"] = get_path(\"ymir_detectors.nxs\").as_posix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!beamlime \\\n",
     "    --workflow dummy \\\n",
     "    --nexus-template-path ../../tests/applications/ymir_detectors.json \\\n",
-    "    --nexus-file-path 'ymir_detectors.nxs' \\\n",
-    "    --image-path-prefix reduction-result"
+    "    --nexus-file-path $TEST_NEXUS_FILE_PATH \\\n",
+    "    --image-path-prefix reduction-result \\\n",
+    "    --fill-dummy-data"
    ]
   },
   {
@@ -103,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
