--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -34,6 +34,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "nbsphinx": "hidden",
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.path.append(\"../../tests/helpers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +58,17 @@
     "\n",
     "sc.get_logger().addHandler(sc.logging.make_widget_handler())\n",
     "sc.display_logs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests.applications.data import get_path\n",
+    "\n",
+    "file_path = get_path('ymir_detectors.nxs').as_posix()  # Path to the example file"
    ]
   },
   {
@@ -101,7 +128,7 @@
     "        NexusTemplatePath: NexusTemplatePath(\n",
     "            '../../tests/applications/ymir_detectors.json'\n",
     "        ),\n",
-    "        NexusFilePath: NexusFilePath(\"ymir_detectors.nxs\"),\n",
+    "        NexusFilePath: NexusFilePath(file_path),\n",
     "        # TODO: Make a matching file for the template\n",
     "        ResultRegistry: result_registry,\n",
     "    },\n",
@@ -162,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
