--- a/docs/user-guide/live_data_reduction.ipynb
+++ b/docs/user-guide/live_data_reduction.ipynb
@@ -99,6 +99,7 @@
     "from beamlime.applications.daemons import (\n",
     "    DataPieceReceived,\n",
     "    FakeListener,\n",
+    "    FillDummyData,\n",
     "    NexusTemplatePath,\n",
     "    NumFrames,\n",
     "    DataFeedingSpeed,\n",
@@ -131,6 +132,7 @@
     "        NexusFilePath: NexusFilePath(file_path),\n",
     "        # TODO: Make a matching file for the template\n",
     "        ResultRegistry: result_registry,\n",
+    "        FillDummyData: FillDummyData(True),\n",
     "    },\n",
     "):\n",
     "    prototype_factory[BeamlimeLogger].setLevel(\"INFO\")\n",
@@ -175,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lime-dev-310",
    "language": "python",
    "name": "python3"
   },
