Init with empty plot

--- a/src/beamlime/frontend/plopp-ipywidgets-voila.ipynb
+++ b/src/beamlime/frontend/plopp-ipywidgets-voila.ipynb
@@ -6,10 +6,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import asyncio\n",
+    "import os\n",
+    "import threading\n",
+    "from collections import deque\n",
+    "\n",
+    "import msgpack\n",
+    "import websockets\n",
+    "\n",
+    "from beamlime.core.serialization import deserialize_data_array\n",
+    "\n",
+    "\n",
+    "# Thread-safe buffer for latest array\n",
+    "data_buffer = deque(maxlen=1)  # Only keep most recent array\n",
+    "\n",
+    "\n",
+    "def websocket_worker():\n",
+    "    \"\"\"Background thread for WebSocket communication\"\"\"\n",
+    "\n",
+    "    async def connect_websocket():\n",
+    "        uri = \"ws://localhost:5555/ws\"\n",
+    "        async with websockets.connect(uri) as websocket:\n",
+    "            while True:\n",
+    "                try:\n",
+    "                    data = await websocket.recv()\n",
+    "                    if data:\n",
+    "                        # print('new data')\n",
+    "                        try:\n",
+    "                            arrays = {\n",
+    "                                tuple(k.split('||')): deserialize_data_array(v)\n",
+    "                                for k, v in msgpack.unpackb(data).items()\n",
+    "                            }\n",
+    "                            # data_buffer.append(arrays)\n",
+    "                            provider.update_data(next(iter(arrays.values())))\n",
+    "                        except (msgpack.UnpackException, KeyError) as e:\n",
+    "                            print(\"Error processing data: %s\", e)\n",
+    "                except websockets.ConnectionClosed:\n",
+    "                    print(\"WebSocket connection closed, attempting to reconnect...\")\n",
+    "                    await asyncio.sleep(2)\n",
+    "                    break\n",
+    "\n",
+    "    async def keep_alive():\n",
+    "        while True:\n",
+    "            try:\n",
+    "                await connect_websocket()\n",
+    "            except Exception as e:\n",
+    "                print(f\"WebSocket error: {e}\")\n",
+    "                await asyncio.sleep(2)\n",
+    "\n",
+    "    asyncio.run(keep_alive())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib widget\n",
     "import plopp\n",
     "import ipywidgets as ipw\n",
     "import scipp as sc\n",
+    "import numpy as np\n",
     "from dataclasses import dataclass\n",
     "from numpy.random import default_rng\n",
     "\n",
@@ -22,7 +80,7 @@
     "    y = sc.array(dims=['row'], unit='m', values=(rng.random(nrow)))\n",
     "    data = sc.ones(dims=['row'], unit='K', shape=[nrow])\n",
     "    data.values += 0.1 * rng.random(nrow)\n",
-    "    return sc.DataArray(data=data, coords={'x': x, 'y': y}).hist(x=10, y=10)"
+    "    return sc.DataArray(data=data, coords={'x': x, 'y': y}).hist(x=100, y=100) * 10"
    ]
   },
   {
@@ -56,22 +114,49 @@
     "        self._node.notify_children(message='hi')\n",
     "\n",
     "\n",
-    "da = make_random_data()\n",
-    "\n",
-    "provider = DataProvider(da)\n",
+    "provider = DataProvider(None)\n",
     "\n",
     "\n",
-    "def run_change_data():\n",
-    "    for _ in range(100):\n",
-    "        provider.update_data(make_random_data())\n",
-    "        time.sleep(0.1)\n",
+    "threading.Thread(target=websocket_worker, daemon=True).start()\n",
+    "\n",
+    "vmax_slider = ipw.IntRangeSlider(\n",
+    "    max=1000, description='vmax', layout={'width': '400px'}, value=(0, 1000)\n",
+    ")\n",
+    "vmax_node = plopp.widget_node(vmax_slider)\n",
     "\n",
     "\n",
-    "thread = threading.Thread(target=run_change_data)\n",
-    "thread.start()\n",
+    "@plopp.node\n",
+    "def clip_data(da: sc.DataArray, clim: tuple[int, int]) -> sc.DataArray:\n",
+    "    vmin, vmax = clim\n",
+    "    da.data = sc.where(\n",
+    "        (da.data > sc.scalar(vmax, unit=da.unit))\n",
+    "        | (da.data < sc.scalar(vmin, unit=da.unit)),\n",
+    "        sc.scalar(np.nan, unit=da.unit),\n",
+    "        da.data,\n",
+    "    )\n",
+    "    return da\n",
     "\n",
-    "image = plopp.imagefigure(provider.value_node, norm='linear', vmin=1, vmax=100)\n",
+    "\n",
+    "clipped = clip_data(provider.value_node, clim=vmax_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = plopp.imagefigure(vmin=1, vmax=200, cbar=True, aspect='equal')\n",
     "ipw.VBox([image])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "provider.value_node.add_view(image)"
    ]
   }
  ],
