--- a/src/beamlime/frontend/plopp-ipywidgets-voila.ipynb
+++ b/src/beamlime/frontend/plopp-ipywidgets-voila.ipynb
@@ -6,19 +6,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib widget\n",
+    "import scipp as sc\n",
+    "from dataclasses import dataclass\n",
+    "import plopp\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class DataHandle:\n",
+    "    value: sc.DataArray | None\n",
+    "\n",
+    "\n",
+    "class DataProvider:\n",
+    "    def __init__(self, value: sc.DataArray | None):\n",
+    "        self._handle = DataHandle(value)\n",
+    "        self._node = plopp.Node(self._handle)\n",
+    "\n",
+    "        @plopp.node\n",
+    "        def get_value(handle: DataHandle) -> sc.DataArray | None:\n",
+    "            return handle.value\n",
+    "\n",
+    "        self.value_node = get_value(self._node)\n",
+    "\n",
+    "    def update_data(self, value: sc.DataArray):\n",
+    "        self._handle.value = value\n",
+    "        self._node.notify_children(message='hi')\n",
+    "\n",
+    "\n",
+    "providers: dict[str, DataProvider] = {}\n",
+    "images = [\n",
+    "    plopp.imagefigure(vmin=1, vmax=200, cbar=True, aspect='equal') for _ in range(4)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import asyncio\n",
-    "import os\n",
-    "import threading\n",
-    "from collections import deque\n",
     "\n",
     "import msgpack\n",
     "import websockets\n",
     "\n",
     "from beamlime.core.serialization import deserialize_data_array\n",
-    "\n",
-    "\n",
-    "# Thread-safe buffer for latest array\n",
-    "data_buffer = deque(maxlen=1)  # Only keep most recent array\n",
     "\n",
     "\n",
     "def websocket_worker():\n",
@@ -31,14 +63,24 @@
     "                try:\n",
     "                    data = await websocket.recv()\n",
     "                    if data:\n",
-    "                        # print('new data')\n",
     "                        try:\n",
     "                            arrays = {\n",
     "                                tuple(k.split('||')): deserialize_data_array(v)\n",
     "                                for k, v in msgpack.unpackb(data).items()\n",
     "                            }\n",
-    "                            # data_buffer.append(arrays)\n",
-    "                            provider.update_data(next(iter(arrays.values())))\n",
+    "                            for i, (key, value) in enumerate(arrays.items()):\n",
+    "                                # plopp.imagefigure needs coords?\n",
+    "                                name = ' '.join(key)\n",
+    "                                for dim in value.dims:\n",
+    "                                    if dim not in value.coords:\n",
+    "                                        value.coords[dim] = sc.arange(\n",
+    "                                            dim, value.sizes[dim], unit=None\n",
+    "                                        )\n",
+    "                                if name not in providers:\n",
+    "                                    providers[name] = DataProvider(value)\n",
+    "                                    providers[name].value_node.add_view(images[i])\n",
+    "                                else:\n",
+    "                                    providers[name].update_data(value)\n",
     "                        except (msgpack.UnpackException, KeyError) as e:\n",
     "                            print(\"Error processing data: %s\", e)\n",
     "                except websockets.ConnectionClosed:\n",
@@ -63,24 +105,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "import plopp\n",
     "import ipywidgets as ipw\n",
-    "import scipp as sc\n",
-    "import numpy as np\n",
-    "from dataclasses import dataclass\n",
-    "from numpy.random import default_rng\n",
     "\n",
-    "rng = default_rng(seed=1234)\n",
-    "\n",
-    "\n",
-    "def make_random_data() -> sc.DataArray:\n",
-    "    nrow = 1000\n",
-    "    x = sc.array(dims=['row'], unit='m', values=(rng.random(nrow)))\n",
-    "    y = sc.array(dims=['row'], unit='m', values=(rng.random(nrow)))\n",
-    "    data = sc.ones(dims=['row'], unit='K', shape=[nrow])\n",
-    "    data.values += 0.1 * rng.random(nrow)\n",
-    "    return sc.DataArray(data=data, coords={'x': x, 'y': y}).hist(x=100, y=100) * 10"
+    "row1 = images[0:2]\n",
+    "row2 = images[2:4]\n",
+    "ipw.VBox([ipw.HBox(row1), ipw.HBox(row2)])"
    ]
   },
   {
@@ -90,73 +119,8 @@
    "outputs": [],
    "source": [
     "import threading\n",
-    "import time\n",
     "\n",
-    "\n",
-    "@dataclass\n",
-    "class DataHandle:\n",
-    "    value: sc.DataArray\n",
-    "\n",
-    "\n",
-    "class DataProvider:\n",
-    "    def __init__(self, value: sc.DataArray):\n",
-    "        self._handle = DataHandle(value)\n",
-    "        self._node = plopp.Node(self._handle)\n",
-    "\n",
-    "        @plopp.node\n",
-    "        def get_value(handle: DataHandle) -> sc.DataArray:\n",
-    "            return handle.value\n",
-    "\n",
-    "        self.value_node = get_value(self._node)\n",
-    "\n",
-    "    def update_data(self, value: sc.DataArray):\n",
-    "        self._handle.value = value\n",
-    "        self._node.notify_children(message='hi')\n",
-    "\n",
-    "\n",
-    "provider = DataProvider(None)\n",
-    "\n",
-    "\n",
-    "threading.Thread(target=websocket_worker, daemon=True).start()\n",
-    "\n",
-    "vmax_slider = ipw.IntRangeSlider(\n",
-    "    max=1000, description='vmax', layout={'width': '400px'}, value=(0, 1000)\n",
-    ")\n",
-    "vmax_node = plopp.widget_node(vmax_slider)\n",
-    "\n",
-    "\n",
-    "@plopp.node\n",
-    "def clip_data(da: sc.DataArray, clim: tuple[int, int]) -> sc.DataArray:\n",
-    "    vmin, vmax = clim\n",
-    "    da.data = sc.where(\n",
-    "        (da.data > sc.scalar(vmax, unit=da.unit))\n",
-    "        | (da.data < sc.scalar(vmin, unit=da.unit)),\n",
-    "        sc.scalar(np.nan, unit=da.unit),\n",
-    "        da.data,\n",
-    "    )\n",
-    "    return da\n",
-    "\n",
-    "\n",
-    "clipped = clip_data(provider.value_node, clim=vmax_node)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = plopp.imagefigure(vmin=1, vmax=200, cbar=True, aspect='equal')\n",
-    "ipw.VBox([image])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "provider.value_node.add_view(image)"
+    "threading.Thread(target=websocket_worker, daemon=True).start()"
    ]
   }
  ],
