Remove helper functions and wipe out related tests except for examples.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -27,9 +27,9 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "sys.path.append(\"../../tests/helpers\")\n",
+    "sys.path.append(\"../../tests\")\n",
     "\n",
-    "from tests.applications.data import get_path\n",
+    "from conftest import get_path\n",
     "\n",
     "os.environ[\"TEST_NEXUS_FILE_PATH\"] = get_path(\"ymir_detectors.nxs\").as_posix()"
    ]
@@ -42,10 +42,23 @@
    "source": [
     "!beamlime \\\n",
     "    --workflow dummy \\\n",
-    "    --nexus-template-path ../../tests/applications/ymir_detectors.json \\\n",
     "    --nexus-file-path $TEST_NEXUS_FILE_PATH \\\n",
     "    --image-path-prefix reduction-result \\\n",
     "    --fill-dummy-data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is another command ``beamlime-raw-detectors`` but it does not work with ymir file.\n",
+    "```bash\n",
+    "!beamlime-raw-detectors \\\n",
+    "    --fake-listener \\\n",
+    "    --static-file-path loki.hdf  \\\n",
+    "    --nexus-file-path loki.hdf  \\\n",
+    "    --fill-dummy-data\n",
+    "```"
    ]
   },
   {
@@ -111,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev310",
+   "display_name": "lime-dev-310",
    "language": "python",
    "name": "python3"
   },
