Remove example application and related tests.

--- a/docs/user-guide/getting-started.ipynb
+++ b/docs/user-guide/getting-started.ipynb
@@ -4,70 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Started\n",
-    "\n",
-    "## Running Beamlime\n",
-    "\n",
-    "Run the `beamlime` command, and specify which workflow to use.\n",
-    "Usually this would be done from a terminal.\n",
-    "The current setup plots the results of the workflow and saves them to a file, which can we specify using the `--image-path` flag:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbsphinx": "hidden",
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "sys.path.append(\"../../tests\")\n",
-    "\n",
-    "from conftest import get_path\n",
-    "\n",
-    "os.environ[\"TEST_NEXUS_FILE_PATH\"] = get_path(\"ymir_detectors.nxs\").as_posix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!beamlime \\\n",
-    "    --workflow dummy \\\n",
-    "    --nexus-file-path $TEST_NEXUS_FILE_PATH \\\n",
-    "    --image-path-prefix reduction-result \\\n",
-    "    --fill-dummy-data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is another command ``beamlime-raw-detectors`` but it does not work with ymir file.\n",
-    "```bash\n",
-    "!beamlime-raw-detectors \\\n",
-    "    --fake-listener \\\n",
-    "    --static-file-path loki.hdf  \\\n",
-    "    --nexus-file-path loki.hdf  \\\n",
-    "    --fill-dummy-data\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The dummy workflow returns a single result named \"reduction-result.png\", which is added as a suffix to the output file name:\n",
-    "\n",
-    "![Plot of reduction result](reduction-result.png)"
+    "# Getting Started"
    ]
   },
   {
