Copy helper functions for benchmark visualization.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -25,8 +25,7 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append(\"../../\")  # To use ``docs`` as a package.\n",
-    "sys.path.append(\"../../tests/helpers/\")  # To use ``tests`` as a package."
+    "sys.path.append(\"../../\")  # To use ``docs`` as a package."
    ]
   },
   {
@@ -36,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tests.benchmarks.ess_requirements import ESSInstruments\n",
+    "from ess_requirements import ESSInstruments\n",
     "\n",
     "ess_requirements = ESSInstruments()\n",
     "ess_requirements.show()"
@@ -63,17 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tests.benchmarks.environments import env_providers\n",
-    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, ResultMap\n",
-    "from beamlime.constructors import Factory\n",
+    "from loader import collect_reports, merge_measurements\n",
     "from docs.about.data import benchmark_results\n",
     "import json\n",
     "\n",
     "results = benchmark_results()\n",
     "results_map = json.loads(results.read_text())\n",
-    "factory = Factory(loading_providers, env_providers)\n",
-    "with factory.constant_provider(ResultMap, results_map):\n",
-    "    df = factory[MergedMeasurementsDF]"
+    "report_map = collect_reports(results_map)\n",
+    "df = merge_measurements(report_map)"
    ]
   },
   {
@@ -84,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Flatten required hardware specs into columns.\n",
-    "from tests.benchmarks.environments import BenchmarkEnvironment\n",
+    "from environments import BenchmarkEnvironment\n",
     "\n",
     "\n",
     "def retrieve_total_memory(env: BenchmarkEnvironment) -> float:\n",
@@ -138,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tests.benchmarks.calculations import sample_mean_per_bin, sample_variance_per_bin\n",
+    "from calculations import sample_mean_per_bin, sample_variance_per_bin\n",
     "\n",
     "# Calculate mean and variance per bin.\n",
     "binned = ds[\"speed\"].group(\"event_rate\", \"num_pixels\", \"cpu_cores\")\n",
@@ -179,7 +175,7 @@
    "source": [
     "# Draw a contour plot.\n",
     "from matplotlib import pyplot as plt\n",
-    "from tests.benchmarks.visualize import plot_contourf\n",
+    "from visualize import plot_contourf\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10, 7))\n",
     "ctr = plot_contourf(\n",
@@ -395,7 +391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lime-dev-310",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
