--- a/scripts/log_producer.ipynb
+++ b/scripts/log_producer.ipynb
@@ -8,19 +8,38 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "import ipywidgets as widgets\n",
     "from beamlime.kafka.sink import KafkaSink, serialize_dataarray_to_f144\n",
     "from beamlime import Message, StreamId, StreamKind\n",
     "\n",
     "instrument = 'bifrost'\n",
     "\n",
-    "# Create logger that prints to stdout\n",
+    "# Create output widget for displaying messages\n",
+    "output_widget = widgets.Output(layout={'border': '1px solid black', 'height': '200px'})\n",
+    "\n",
+    "\n",
+    "# Custom logging handler that writes to the output widget\n",
+    "class WidgetHandler(logging.Handler):\n",
+    "    def __init__(self, output_widget):\n",
+    "        super().__init__()\n",
+    "        self.output_widget = output_widget\n",
+    "\n",
+    "    def emit(self, record):\n",
+    "        msg = self.format(record)\n",
+    "        with self.output_widget:\n",
+    "            print(msg)\n",
+    "\n",
+    "\n",
+    "# Create logger that writes to the output widget\n",
     "logger = logging.getLogger(__name__)\n",
     "logger.setLevel(logging.INFO)\n",
-    "handler = logging.StreamHandler()\n",
-    "handler.setFormatter(\n",
+    "# Clear any existing handlers\n",
+    "logger.handlers.clear()\n",
+    "widget_handler = WidgetHandler(output_widget)\n",
+    "widget_handler.setFormatter(\n",
     "    logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
     ")\n",
-    "logger.addHandler(handler)\n",
+    "logger.addHandler(widget_handler)\n",
     "\n",
     "sink = KafkaSink(\n",
     "    kafka_config={\"bootstrap.servers\": \"localhost:9092\"},\n",
@@ -42,7 +61,8 @@
     "\n",
     "da = sc.DataArray(sc.scalar(1.2), coords={'time': sc.scalar(time.time_ns(), unit='ns')})\n",
     "msg = Message(value=da, stream=StreamId(kind=StreamKind.LOG, name='detector_angle'))\n",
-    "sink.publish_messages([msg])"
+    "sink.publish_messages([msg])\n",
+    "logger.info(\"Published message with value: %s\", da.value)"
    ]
   },
   {
@@ -64,7 +84,7 @@
     "    )\n",
     "    msg = Message(value=da, stream=StreamId(kind=StreamKind.LOG, name='detector_angle'))\n",
     "    sink.publish_messages([msg])\n",
-    "    print(f\"Published message with value: {value}\")\n",
+    "    logger.info(\"Slider changed - Published message with value : %s\", value)\n",
     "\n",
     "\n",
     "slider = widgets.FloatSlider(\n",
@@ -73,11 +93,13 @@
     "    max=10.0,\n",
     "    step=0.1,\n",
     "    description='Detector Angle:',\n",
-    "    continuous_update=False,\n",
+    "    continuous_update=True,\n",
     ")\n",
     "\n",
     "slider.observe(on_slider_change, names='value')\n",
-    "display(slider)"
+    "\n",
+    "# Display the slider and output widget\n",
+    "display(widgets.VBox([slider, output_widget]))"
    ]
   }
  ],
