--- a/scripts/log_producer.ipynb
+++ b/scripts/log_producer.ipynb
@@ -15,7 +15,7 @@
     "instrument = 'bifrost'\n",
     "\n",
     "# Create output widget for displaying messages\n",
-    "output_widget = widgets.Output(layout={'border': '1px solid black', 'height': '200px'})\n",
+    "output_widget = widgets.Output(layout={'border': '1px solid black', 'height': '500px'})\n",
     "\n",
     "\n",
     "# Custom logging handler that writes to the output widget\n",
@@ -59,10 +59,15 @@
     "import time\n",
     "import scipp as sc\n",
     "\n",
-    "da = sc.DataArray(sc.scalar(1.2), coords={'time': sc.scalar(time.time_ns(), unit='ns')})\n",
-    "msg = Message(value=da, stream=StreamId(kind=StreamKind.LOG, name='detector_angle'))\n",
-    "sink.publish_messages([msg])\n",
-    "logger.info(\"Published message with value: %s\", da.value)"
+    "\n",
+    "def publish_now(value: float, stream_name: str):\n",
+    "    \"\"\"Helper function to publish a message immediately\"\"\"\n",
+    "    da = sc.DataArray(\n",
+    "        sc.scalar(value), coords={'time': sc.scalar(time.time_ns(), unit='ns')}\n",
+    "    )\n",
+    "    msg = Message(value=da, stream=StreamId(kind=StreamKind.LOG, name=stream_name))\n",
+    "    sink.publish_messages([msg])\n",
+    "    logger.info(\"Stream '%s' - Published message with value: %s\", stream_name, value)"
    ]
   },
   {
@@ -76,30 +81,92 @@
     "from IPython.display import display\n",
     "\n",
     "\n",
-    "def on_slider_change(change):\n",
-    "    \"\"\"Callback function that publishes a message when slider value changes\"\"\"\n",
-    "    value = change['new']\n",
-    "    da = sc.DataArray(\n",
-    "        sc.scalar(value), coords={'time': sc.scalar(time.time_ns(), unit='ns')}\n",
+    "def create_stream_slider(\n",
+    "    stream_name, description, initial_value=0.0, min_val=0.0, max_val=10.0, step=0.1\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Create a slider widget that publishes messages to a specified stream.\n",
+    "\n",
+    "    Args:\n",
+    "        stream_name: Name of the stream to publish to\n",
+    "        description: Description text for the slider\n",
+    "        initial_value: Initial slider value\n",
+    "        min_val: Minimum slider value\n",
+    "        max_val: Maximum slider value\n",
+    "        step: Step size for slider\n",
+    "\n",
+    "    Returns:\n",
+    "        FloatSlider widget configured with callback\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def on_slider_change(change):\n",
+    "        \"\"\"Callback function that publishes a message when slider value changes\"\"\"\n",
+    "        value = change['new']\n",
+    "        publish_now(value, stream_name)\n",
+    "        logger.info(\n",
+    "            \"Stream '%s' - Published message with value: %s\", stream_name, value\n",
+    "        )\n",
+    "\n",
+    "    slider = widgets.FloatSlider(\n",
+    "        value=initial_value,\n",
+    "        min=min_val,\n",
+    "        max=max_val,\n",
+    "        step=step,\n",
+    "        description=description,\n",
+    "        continuous_update=True,\n",
+    "        layout=widgets.Layout(width='500px'),\n",
+    "        style={'description_width': '200px'},\n",
     "    )\n",
-    "    msg = Message(value=da, stream=StreamId(kind=StreamKind.LOG, name='detector_angle'))\n",
-    "    sink.publish_messages([msg])\n",
-    "    logger.info(\"Slider changed - Published message with value : %s\", value)\n",
     "\n",
-    "\n",
-    "slider = widgets.FloatSlider(\n",
-    "    value=1.2,\n",
-    "    min=0.0,\n",
-    "    max=10.0,\n",
-    "    step=0.1,\n",
+    "    slider.observe(on_slider_change, names='value')\n",
+    "    return slider\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detector_angle_slider = create_stream_slider(\n",
+    "    stream_name='detector_angle',\n",
     "    description='Detector Angle:',\n",
-    "    continuous_update=True,\n",
+    "    initial_value=1.2,\n",
+    "    min_val=0.0,\n",
+    "    max_val=10.0,\n",
+    "    step=0.1,\n",
     ")\n",
     "\n",
-    "slider.observe(on_slider_change, names='value')\n",
+    "sample_temperature_slider = create_stream_slider(\n",
+    "    stream_name='sample_temperature',\n",
+    "    description='Sample Temp (K):',\n",
+    "    initial_value=300.0,\n",
+    "    min_val=0.0,\n",
+    "    max_val=1000.0,\n",
+    "    step=1.0,\n",
+    ")\n",
     "\n",
-    "# Display the slider and output widget\n",
-    "display(widgets.VBox([slider, output_widget]))"
+    "magnetic_field_slider = create_stream_slider(\n",
+    "    stream_name='magnetic_field',\n",
+    "    description='Magnetic Field (T):',\n",
+    "    initial_value=0.0,\n",
+    "    min_val=-5.0,\n",
+    "    max_val=5.0,\n",
+    "    step=0.01,\n",
+    ")\n",
+    "\n",
+    "# Display all sliders and output widget\n",
+    "display(\n",
+    "    widgets.VBox(\n",
+    "        [\n",
+    "            detector_angle_slider,\n",
+    "            sample_temperature_slider,\n",
+    "            magnetic_field_slider,\n",
+    "            output_widget,\n",
+    "        ]\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
